<resources>
    <string name="app_name">图像云存储</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">安全且高效的图像云存储系统</string>
    <string name="nav_header_subtitle">SCUT 华南小小萌新</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">相册</string>
    <string name="menu_slideshow">状态和设置</string>
    <string name="take_photo">拍照</string>
    <string name="home_button">Take a photo</string>
    <string name="next">下一步</string>
    <string name="muti_select">多选/单选</string>
    <string name="update_from_cloud">从云端刷新缩略图</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings">设置</string>
    <string name="about">关于本软件：</string>
    <string name="priview_save">保存</string>
    <string name="priview_encrypt">解密</string>
    <string name="about_content">
        \t\t\t\t本软件实现了图像数据安全且高效的云存储系统。
        在赵搏文老师和冼允廷老师的指导下，由来自华南理工大学的崔钰薪、黄梓熙、冯裕城、左晓乐开发。\n
        团队名称：\n
        华南小小萌新 https://github.com/orgs/SCUT-CS/teams/crypt \n
        指导教师：\n
        赵搏文老师 https://faculty.xidian.edu.cn/zhaobowen/zh_CN/index.htm \n
        冼允廷老师 xianyt@scut.edu.cn \n
        队员：\n
        崔钰薪 https://github.com/liukanshan1\n
        黄梓熙 https://github.com/johnson-cc\n
        冯裕城 https://github.com/FutabaRio965\n
        左晓乐 https://github.com/josuke7777
    </string>
    <string name="image_num">云端照片数量</string>
    <string name="cloud_provider">提供商</string>
    <string name="cloud2">云存储2</string>
    <string name="cloud1">云存储1</string>
    <!-- Preference Titles -->
    <string name="cloud_storage1">云存储1登录口令</string>
    <string name="cloud_storage2">云存储2登录口令</string>
    <string name="cam_res">拍照分辨率</string>
    <string name="next_step">下一步</string>
    <string name="openCloud">进入云服务</string>
    <string name="Uri_服务器">https://oss.console.aliyun.com/bucket/oss-cn-hangzhou</string>
</resources>